--- a/missing.html
+++ b/missing.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Preloading images for faster loading -->
     <link
       rel="preload"
       href="./images/websitebanner.webp"
@@ -14,11 +15,13 @@
       fetchpriority="high"
     />
     <!-- Required Scripts -->
+    <!-- Linking required Javascript files -->
     <script src="navbar.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/autoComplete.min.js"></script>
     <!-- End Scripts -->
     <!-- Required Stylesheets -->
+    <!-- Linking required CSS files -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -32,6 +35,7 @@
     <!-- End Stylesheets -->
 
     <!-- Meta tags -->
+    <!-- Setting metadata -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Error 404 - Van Meter United Methodist Church</title>
@@ -43,6 +47,7 @@
       name="description"
       content="The Van Meter United Methodist Church site provides users with dates, times and details for the worship and fellowship of the congregation."
     />
+    <!-- Setting icon -->
     <link rel="icon" href="./images/umc-logo.png" />
   </head>
 
@@ -73,12 +78,15 @@
 
           <div class="collapse navbar-collapse" id="navbarsExample05">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <!-- Navigation link -->
               <li class="nav-item">
                 <a class="nav-link" href="/">Home</a>
               </li>
+              <!-- Navigation link -->
               <li class="nav-item">
                 <a class="nav-link" href="/kidscare.html"> Kids Care </a>
               </li>
+              <!-- Dropdown menu -->
               <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle"
@@ -88,31 +96,37 @@
                   >Our Church</a
                 >
                 <ul class="dropdown-menu dropdown-menu-dark bg-dark shadow">
+                  <!-- Dropdown item -->
                   <li>
                     <a class="dropdown-item" href="/directions.html">
                       Church Directions
                     </a>
                   </li>
+                  <!-- Dropdown item -->
                   <li>
                     <a class="dropdown-item" href="/community.html">
                       Church Community
                     </a>
                   </li>
+                  <!-- Dropdown item -->
                   <li>
                     <a class="dropdown-item" href="/services.html">
                       Church Services
                     </a>
                   </li>
+                  <!-- Dropdown item -->
                   <li>
                     <a class="dropdown-item" href="/education.html">
                       Christian Education
                     </a>
                   </li>
+                  <!-- Dropdown item -->
                   <li>
                     <a class="dropdown-item" href="/staff.html">
                       Church Staff
                     </a>
                   </li>
+                  <!-- Dropdown item -->
                   <li>
                     <a class="dropdown-item" href="/beliefs.html">
                       Church Beliefs
@@ -120,21 +134,27 @@
                   </li>
                 </ul>
               </li>
+              <!-- Navigation link -->
               <li class="nav-item">
                 <a class="nav-link" href="/worship.html"> Worship </a>
               </li>
+              <!-- Navigation link -->
               <li class="nav-item">
                 <a class="nav-link" href="/ministries.html"> Ministries </a>
               </li>
+              <!-- Navigation link -->
               <li class="nav-item">
                 <a class="nav-link" href="/photos.html"> Photos </a>
               </li>
+              <!-- Navigation link -->
               <li class="nav-item">
                 <a class="nav-link" href="/calendar.html"> Calendar </a>
               </li>
+              <!-- Navigation link -->
               <li class="nav-item">
                 <a class="nav-link" href="/publications.html"> Publications </a>
               </li>
+              <!-- Dropdown menu -->
               <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle"
@@ -144,21 +164,25 @@
                   >Contact Us</a
                 >
                 <ul class="dropdown-menu dropdown-menu-dark bg-dark">
+                  <!-- Dropdown item -->
                   <li>
                     <a class="dropdown-item" href="/contact.html">
                       Contact Info
                     </a>
                   </li>
+                  <!-- Dropdown item -->
                   <li>
                     <a class="dropdown-item" href="/prayer-request.html">
                       Prayer Request
                     </a>
                   </li>
+                  <!-- Dropdown item -->
                   <li>
                     <a class="dropdown-item" href="/building-request.html">
                       Building Use Request
                     </a>
                   </li>
+                  <!-- Dropdown item -->
                   <li>
                     <a class="dropdown-item" href="/information-request.html">
                       Information Request
@@ -170,6 +194,7 @@
           </div>
         </div>
       </nav>
+      <!-- Search bar -->
       <div class="container-fluid bg-dark pb-3">
         <div class="row">
           <div class="col">
