--- a/directions.html
+++ b/directions.html
@@ -224,8 +224,8 @@
         </div>
       </div>
     </div>
-    <!-- End Navbar -->
 
+    <!-- Main content section -->
     <div class="px-3 container mx-auto bg pb-5">
       <div class="row pt-5 mx-auto text-center">
         <h1>Join Us</h1>
