--- a/publications.html
+++ b/publications.html
@@ -224,8 +224,8 @@
         </div>
       </div>
     </div>
-    <!-- End Navbar -->
 
+    <!-- Main content section -->
     <div class="px-3 container mx-auto bg pb-5">
       <div class="row mx-auto text-center pt-5">
         <h1>Church Publications</h1>
