--- a/building-request.html
+++ b/building-request.html
@@ -287,8 +287,8 @@
         </div>
       </div>
     </div>
-    <!-- End Navbar -->
 
+    <!-- Main content section -->
     <div class="px-3 container mx-auto bg pb-5">
       <div class="row mx-auto pt-5">
         <h1 class="text-center">Building Use Request Form</h1>
