--- a/community.html
+++ b/community.html
@@ -224,7 +224,8 @@
         </div>
       </div>
     </div>
-    <!-- End Navbar -->
+
+    <!-- Main content section -->
     <div class="px-3 container mx-auto bg pb-5">
       <!-- Start Heading Row -->
       <div class="row pt-5 mx-auto text-center">
