--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
     </div>
   </div>
   <body>
+    <!-- Main content section -->
     <div class="px-3 container mx-auto bg pb-5">
       <div class="row pt-5 mx-auto">
         <div class="col-lg-6">
