Finished Bulk Comments

--- a/index.html
+++ b/index.html
@@ -656,6 +656,7 @@
       </div>
     </div>
   </body>
+  <!-- Footer Section -->
   <footer class="mb-sm-3 container mx-auto p-0">
     <div class="row mx-auto bg-dark shadow text-white rounded-sm-bottom">
       <div
