--- a/GLOW.html
+++ b/GLOW.html
@@ -14,13 +14,13 @@
       as="image"
       fetchpriority="high"
     />
-    <!-- Required Scripts -->
+
     <!-- Linking required Javascript files -->
     <script src="navbar.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/autoComplete.min.js"></script>
     <!-- End Scripts -->
-    <!-- Required Stylesheets -->
+
     <!-- Linking required CSS files -->
     <link
       rel="stylesheet"
@@ -32,9 +32,6 @@
     />
     <link rel="stylesheet" href="./index.css" />
 
-    <!-- End Stylesheets -->
-
-    <!-- Meta tags -->
     <!-- Setting metadata -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -51,9 +48,7 @@
     <link rel="icon" href="./images/umc-logo.png" />
   </head>
 
-  <!-- Body starts here -->
   <body>
-    <!-- Banner -->
     <!-- Banner section -->
     <div id="banner" class="mt-sm-3 container mx-auto p-0 rounded-sm-top">
       <picture>
@@ -65,8 +60,7 @@
         <img class="w-100 rounded-sm-top" alt="VMUMC Banner" />
       </picture>
     </div>
-    <!-- End Banner -->
-    <!-- Navbar section -->
+
     <!-- Navbar section -->
     <div id="navbar-container" class="container mx-auto p-0">
       <nav
@@ -228,7 +222,7 @@
         </div>
       </div>
     </div>
-
+    <!-- Main content section -->
     <div class="container mx-auto px-3 bg pb-5">
       <div class="row pt-5 mx-auto">
         <div class="col text-center">
@@ -262,7 +256,7 @@
         </div>
       </div>
     </div>
-    <!-- Start Footer -->
+    <!-- Footer Section -->
     <footer class="mb-sm-3 container mx-auto p-0">
       <!-- Footer row -->
       <div class="row mx-auto bg-dark shadow text-white rounded-sm-bottom">
@@ -297,6 +291,5 @@
         </div>
       </div>
     </footer>
-    <!-- End Footer -->
   </body>
 </html>
