--- a/publications.html
+++ b/publications.html
@@ -28,13 +28,13 @@
     />
     <!-- Setting icon -->
     <link rel="icon" href="./images/umc-logo.png" />
-    <!-- Required Scripts -->
+
     <!-- Linking required Javascript files -->
     <script src="navbar.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/autoComplete.min.js"></script>
     <!-- End Scripts -->
-    <!-- Required Stylesheets -->
+
     <!-- Linking required CSS files -->
     <link
       rel="stylesheet"
@@ -45,11 +45,8 @@
       href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css"
     />
     <link rel="stylesheet" href="./index.css" />
-
-    <!-- End Stylesheets -->
   </head>
   <body>
-    <!-- Banner -->
     <!-- Banner section -->
     <div id="banner" class="mt-sm-3 container mx-auto p-0 rounded-sm-top">
       <picture>
@@ -61,8 +58,7 @@
         <img class="w-100 rounded-sm-top" alt="VMUMC Banner" />
       </picture>
     </div>
-    <!-- End Banner -->
-    <!-- Navbar section -->
+
     <!-- Navbar section -->
     <div id="navbar-container" class="container mx-auto p-0">
       <nav
@@ -224,7 +220,6 @@
         </div>
       </div>
     </div>
-
     <!-- Main content section -->
     <div class="px-3 container mx-auto bg pb-5">
       <div class="row mx-auto text-center pt-5">
@@ -402,7 +397,7 @@
         </div>
       </div>
     </div>
-    <!-- Start Footer -->
+    <!-- Footer Section -->
     <footer class="mb-sm-3 container mx-auto p-0">
       <!-- Footer row -->
       <div class="row mx-auto bg-dark shadow text-white rounded-sm-bottom">
@@ -437,6 +432,5 @@
         </div>
       </div>
     </footer>
-    <!-- End Footer -->
   </body>
 </html>
