Added More Comments

--- a/index.html
+++ b/index.html
@@ -243,8 +243,9 @@
           />
         </div>
       </div>
-
+      <!-- Pastors Message, Welcome, Calendar Row -->
       <div class="row mt-4 mx-auto">
+        <!-- Pastors Message Section -->
         <div class="col-lg-4">
           <div class="row text-center">
             <div class="col-lg 2">
@@ -294,6 +295,7 @@
             >
           </p>
         </div>
+        <!-- Welcome Section -->
         <div class="col-lg-4 my-auto text-center">
           <h1>Welcome!</h1>
           <p>
@@ -314,6 +316,7 @@
             Email us at: <a href="mailto:office@vmumc.com">office@vmumc.com</a>
           </p>
         </div>
+        <!-- Calendar Section -->
         <div class="col-lg-4 text-center my-auto">
           <iframe
             class="overflow-hidden rounded"
@@ -323,8 +326,11 @@
           ></iframe>
         </div>
       </div>
+      <!-- Info, Youth Service Project, UMC Logo Row -->
       <div class="row mx-auto mt-4">
+        <!-- Info and Youth Service Project Section -->
         <div class="col-lg-8">
+          <!-- Info 1 Section -->
           <div class="row">
             <div class="col-lg-6">
               <p>
@@ -346,7 +352,7 @@
               </p>
             </div>
           </div>
-
+          <!-- Info 2 Section -->
           <div class="row">
             <div class="col-lg-6">
               <p>
@@ -371,6 +377,7 @@
               </p>
             </div>
           </div>
+          <!-- Youth Service Project Section -->
           <div class="row">
             <div class="col-lg-6">
               <p>
@@ -401,6 +408,7 @@
             </div>
           </div>
         </div>
+        <!-- UMC Logo Section -->
         <div class="col-lg-4 m-t-50">
           <p class="text-center">
             <img
@@ -419,6 +427,7 @@
           </p>
         </div>
       </div>
+      <!-- JAM Section -->
       <div class="row mx-auto">
         <div class="col-lg-4">
           <p>
@@ -451,6 +460,7 @@
           </p>
         </div>
       </div>
+      <!-- Mission Of The Month Section -->
       <div class="row mx-auto">
         <div class="col-lg-4">
           <p>
@@ -475,6 +485,7 @@
           </p>
         </div>
       </div>
+      <!-- Food Pantry Section -->
       <div class="row mx-auto">
         <div class="col-lg-4 align-self-center">
           <p>
@@ -495,6 +506,7 @@
           </p>
         </div>
       </div>
+      <!-- Adult Discussion Group Section -->
       <div class="row mx-auto">
         <div class="col-lg-4">
           <p>
@@ -522,6 +534,7 @@
           </p>
         </div>
       </div>
+      <!-- Worship Help Section -->
       <div class="row mx-auto">
         <div class="col-lg-4">
           <p>
@@ -547,6 +560,7 @@
           </p>
         </div>
       </div>
+      <!-- Nursery Section -->
       <div class="row mx-auto">
         <div class="col-lg-4">
           <p>
@@ -568,6 +582,7 @@
           </p>
         </div>
       </div>
+      <!-- Exercise Your Faith Section -->
       <div class="row mx-auto">
         <div class="col-lg-4">
           <p>
@@ -592,6 +607,7 @@
           </p>
         </div>
       </div>
+      <!-- Bread Ministry Section -->
       <div class="row mx-auto">
         <div class="col-lg-4">
           <p>
@@ -619,6 +635,7 @@
           </p>
         </div>
       </div>
+      <!-- AMA Section -->
       <div class="row mx-auto">
         <div class="col-lg-4">
           <p>
@@ -643,8 +660,8 @@
           </p>
         </div>
       </div>
-      <br />
-      <div class="row mx-auto text-center">
+      <!-- Cross And Flame Section -->
+      <div class="row mx-auto text-center mt-5">
         <em>
           The Cross and Flame is a registered trademark and the use is
           supervised by the General Council on Finance and Administration of The
