Added More Comments

--- a/alternativechristmasgiving.html
+++ b/alternativechristmasgiving.html
@@ -70,6 +70,7 @@
         aria-label="Fifth navbar example"
       >
         <div class="container-fluid">
+          <!-- Brand -->
           <a class="navbar-brand" href="#"
             ><img height="24" width="24" src="./images/white+umc+logo.png" />
             VMUMC</a
@@ -294,9 +295,8 @@
     </div>
     <!-- Footer Section -->
     <footer class="mb-sm-3 container mx-auto p-0">
-      <!-- Footer row -->
       <div class="row mx-auto bg-dark shadow text-white rounded-sm-bottom">
-        <!-- Left column for UMC logo -->
+        <!-- UMC Logo -->
         <div
           class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center"
         >
@@ -304,7 +304,7 @@
             ><img height="60" width="60" src="./images/white+umc+logo.png"
           /></a>
         </div>
-        <!-- Center column for copyright information -->
+        <!-- Copyright Info -->
         <div
           class="col-lg-8 col-md-10 col-sm-12 mt-2 align-self-center text-center text-md-start"
         >
@@ -313,14 +313,14 @@
             All rights reserved.
           </p>
         </div>
-        <!-- Right column for social media links -->
+        <!-- Social Media Text -->
         <div class="col-lg-2 mt-2 text-center align-self-center text-lg-end">
           <p>Stay Connected</p>
         </div>
+        <!-- Social Media Image -->
         <div
           class="col-lg-1 mt-2 ps-lg-0 mb-3 text-center text-lg-start align-self-center"
         >
-          <!-- Social media link -->
           <a href="https://www.facebook.com/profile.php?id=100064317144537"
             ><img height="35" width="35" src="./images/facebook.png"
           /></a>
