--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       aria-label="Fifth navbar example"
     >
       <div class="container-fluid">
+        <!-- Brand -->
         <a class="navbar-brand" href="#"
           ><img height="24" width="24" src="./images/white+umc+logo.png" />
           VMUMC</a
@@ -102,29 +103,35 @@
                 >Our Church</a
               >
               <ul class="dropdown-menu dropdown-menu-dark bg-dark shadow">
+                <!-- Dropdown item -->
                 <li>
                   <a class="dropdown-item" href="/directions.html">
                     Church Directions
                   </a>
                 </li>
+                <!-- Dropdown item -->
                 <li>
                   <a class="dropdown-item" href="/community.html">
                     Church Community
                   </a>
                 </li>
+                <!-- Dropdown item -->
                 <li>
                   <a class="dropdown-item" href="/services.html">
                     Church Services
                   </a>
                 </li>
+                <!-- Dropdown item -->
                 <li>
                   <a class="dropdown-item" href="/education.html">
                     Christian Education
                   </a>
                 </li>
+                <!-- Dropdown item -->
                 <li>
                   <a class="dropdown-item" href="/staff.html"> Church Staff </a>
                 </li>
+                <!-- Dropdown item -->
                 <li>
                   <a class="dropdown-item" href="/beliefs.html">
                     Church Beliefs
@@ -162,21 +169,25 @@
                 >Contact Us</a
               >
               <ul class="dropdown-menu dropdown-menu-dark bg-dark">
+                <!-- Dropdown item -->
                 <li>
                   <a class="dropdown-item" href="/contact.html">
                     Contact Info
                   </a>
                 </li>
+                <!-- Dropdown item -->
                 <li>
                   <a class="dropdown-item" href="/prayer-request.html">
                     Prayer Request
                   </a>
                 </li>
+                <!-- Dropdown item -->
                 <li>
                   <a class="dropdown-item" href="/building-request.html">
                     Building Use Request
                   </a>
                 </li>
+                <!-- Dropdown item -->
                 <li>
                   <a class="dropdown-item" href="/information-request.html">
                     Information Request
@@ -188,6 +199,7 @@
         </div>
       </div>
     </nav>
+    <!-- Search bar -->
     <div class="container-fluid bg-dark pb-3">
       <div class="row">
         <div class="col">
@@ -208,33 +220,55 @@
     </div>
   </div>
   <body>
-    <!-- Main content section -->
+    <!-- Main content container -->
     <div class="px-3 container mx-auto bg pb-5">
+      <!-- Info Section -->
       <div class="row pt-5 mx-auto">
         <div class="col-lg-6">
-          <p>
-            The <strong>Adult Discussion Group</strong> meets each Sunday before
-            the service at <strong>9:30 AM</strong> in the overflow area at the
-            back of the sanctuary.
-            <br />
-            <br />
-            <strong><a href="/GLOW.html">GLOW</a></strong
-            >,
-            (<strong>G</strong>od&nbsp;<strong>L</strong>ights&nbsp;<strong>O</strong>ur&nbsp;<strong>W</strong>ay),
-            our children's program, is held at the same time as the Sunday
-            worship service.
-          </p>
-          <p>
-            Our <strong>Wednesday night</strong> program for youth
-            <strong>kindergarten through 6th grade</strong> is
-            <strong>Kids' <a href="/JAM.html">JAM</a></strong
-            >. It runs <strong>6:00-7:30 PM</strong>.
-          </p>
-          <p>
-            <strong>A staffed nursery is available</strong> for the care of
-            young children during the worship service.
-          </p>
+          <!-- Adult Discussion Info -->
+          <div class="row">
+            <div class="col">
+              <p>
+                The <strong>Adult Discussion Group</strong> meets each Sunday
+                before the service at <strong>9:30 AM</strong> in the overflow
+                area at the back of the sanctuary.
+              </p>
+            </div>
+          </div>
+          <!-- GLOW Info -->
+          <div class="row">
+            <div class="col">
+              <p>
+                <strong><a href="/GLOW.html">GLOW</a></strong
+                >,
+                (<strong>G</strong>od&nbsp;<strong>L</strong>ights&nbsp;<strong>O</strong>ur&nbsp;<strong>W</strong>ay),
+                our children's program, is held at the same time as the Sunday
+                worship service.
+              </p>
+            </div>
+          </div>
+          <!-- JAM Info -->
+          <div class="row">
+            <div class="col">
+              <p>
+                Our <strong>Wednesday night</strong> program for youth
+                <strong>kindergarten through 6th grade</strong> is
+                <strong>Kids' <a href="/JAM.html">JAM</a></strong
+                >. It runs <strong>6:00-7:30 PM</strong>.
+              </p>
+            </div>
+          </div>
+          <!-- Nursery Info -->
+          <div class="row">
+            <div class="col">
+              <p>
+                <strong>A staffed nursery is available</strong> for the care of
+                young children during the worship service.
+              </p>
+            </div>
+          </div>
         </div>
+        <!-- Welcome Image -->
         <div class="col-lg-2 align-self-center text-center">
           <img
             class="w-25 w-lg-100 rounded"
@@ -256,6 +290,7 @@
                 Pastor VMUMC
               </p>
             </div>
+            <!-- Pastors Message Image -->
             <div class="col-lg 2 align-self-center">
               <p>
                 <img
@@ -266,34 +301,39 @@
               </p>
             </div>
           </div>
-          <p>
-            <em
-              >"For surely I know the plans I have for you, says the Lord, plans
-              for your welfare and not for harm, to give you a future with
-              hope." </em
-            >Jeremiah 29:11<br />
-            We have been given the ability to use our God-given abilities to
-            discern together what these plans are for the Holy to give us a
-            future with hope. Then, through Christ, we have been given a witness
-            of how to go about it: with love and integrity. That sounds like
-            marching orders to me!
-          </p>
-          <p>
-            <a href="/pastorsmessage.html"
-              >Click here to read Rev. Beth's Monthly Message.</a
-            >
-          </p>
-          <p>
-            Our regular announcements are in <em>The Grapevine, </em
-            ><a href="/Publications/VMgrapevine.pdf">here</a>.
-          </p>
-          <p>
-            Stay connected by visiting our Facebook page.
-            <a
-              href="https://www.facebook.com/Van-Meter-United-Methodist-Church-142797045750871/"
-              >You can click here to reach it.</a
-            >
-          </p>
+          <!-- Pastors Message Text -->
+          <div class="row">
+            <div class="col">
+              <p>
+                <em
+                  >"For surely I know the plans I have for you, says the Lord,
+                  plans for your welfare and not for harm, to give you a future
+                  with hope." </em
+                >Jeremiah 29:11<br />
+                We have been given the ability to use our God-given abilities to
+                discern together what these plans are for the Holy to give us a
+                future with hope. Then, through Christ, we have been given a
+                witness of how to go about it: with love and integrity. That
+                sounds like marching orders to me!
+              </p>
+              <p>
+                <a href="/pastorsmessage.html"
+                  >Click here to read Rev. Beth's Monthly Message.</a
+                >
+              </p>
+              <p>
+                Our regular announcements are in <em>The Grapevine, </em
+                ><a href="/Publications/VMgrapevine.pdf">here</a>.
+              </p>
+              <p>
+                Stay connected by visiting our Facebook page.
+                <a
+                  href="https://www.facebook.com/Van-Meter-United-Methodist-Church-142797045750871/"
+                  >You can click here to reach it.</a
+                >
+              </p>
+            </div>
+          </div>
         </div>
         <!-- Welcome Section -->
         <div class="col-lg-4 my-auto text-center">
@@ -332,6 +372,7 @@
         <div class="col-lg-8">
           <!-- Info 1 Section -->
           <div class="row">
+            <!-- Info 1 Text -->
             <div class="col-lg-6">
               <p>
                 <strong
@@ -342,6 +383,7 @@
                 Remember to set your clocks ahead one hour Saturday, March 9.
               </p>
             </div>
+            <!-- Info 1 Image -->
             <div class="col-lg-3 align-self-center text-center">
               <p>
                 <img
@@ -354,6 +396,7 @@
           </div>
           <!-- Info 2 Section -->
           <div class="row">
+            <!-- Info 2 Text -->
             <div class="col-lg-6">
               <p>
                 <strong>Ash Wednesday and Lent</strong>
@@ -366,6 +409,7 @@
                 on Easter.
               </p>
             </div>
+            <!-- Info 2 Image -->
             <div class="col-lg-3 align-self-center text-center">
               <p>
                 <img
@@ -379,6 +423,7 @@
           </div>
           <!-- Youth Service Project Section -->
           <div class="row">
+            <!-- Youth Service Project Text -->
             <div class="col-lg-6">
               <p>
                 <strong
@@ -395,6 +440,7 @@
                 >
               </p>
             </div>
+            <!-- Youth Service Project Image -->
             <div class="col-lg-3 align-self-center text-center">
               <p>
                 <a href="/ciayouth.html">
@@ -429,6 +475,7 @@
       </div>
       <!-- JAM Section -->
       <div class="row mx-auto">
+        <!-- JAM Text -->
         <div class="col-lg-4">
           <p>
             <strong>
@@ -448,6 +495,7 @@
             the church.<br />
           </p>
         </div>
+        <!-- JAM Image -->
         <div class="col-lg-3 align-self-center text-center">
           <p>
             <a href="/JAM.html">
@@ -462,6 +510,7 @@
       </div>
       <!-- Mission Of The Month Section -->
       <div class="row mx-auto">
+        <!-- Mission Of The Month Text -->
         <div class="col-lg-4">
           <p>
             <strong
@@ -473,6 +522,7 @@
             Food Pantry.
           </p>
         </div>
+        <!-- Mission Of The Month Image -->
         <div class="col-lg-3 align-self-center text-center">
           <p>
             <a href="/missionmoment.html">
@@ -487,6 +537,7 @@
       </div>
       <!-- Food Pantry Section -->
       <div class="row mx-auto">
+        <!-- Food Pantry Text -->
         <div class="col-lg-4 align-self-center">
           <p>
             <strong>Good Samaritan Food Pantry in Adel<br /></strong> We are
@@ -496,6 +547,7 @@
             >
           </p>
         </div>
+        <!-- Food Pantry Image -->
         <div class="col-lg-3 align-self-center text-center">
           <p>
             <img
@@ -508,6 +560,7 @@
       </div>
       <!-- Adult Discussion Group Section -->
       <div class="row mx-auto">
+        <!-- Adult Discussion Group Text -->
         <div class="col-lg-4">
           <p>
             <strong>Sundays</strong>:<strong
@@ -520,6 +573,7 @@
             not required.
           </p>
         </div>
+        <!-- Adult Discussion Group Image -->
         <div class="col-lg-3 align-self-center text-center">
           <p>
             <a
@@ -536,6 +590,7 @@
       </div>
       <!-- Worship Help Section -->
       <div class="row mx-auto">
+        <!-- Worship Help Text -->
         <div class="col-lg-4">
           <p>
             <strong>Sign up to be a Worship Helper</strong><br />
@@ -546,6 +601,7 @@
             or just talk to Leslie Herman.
           </p>
         </div>
+        <!-- Worship Help Image -->
         <div class="col-lg-3 align-self-center text-center">
           <p>
             <a
@@ -562,6 +618,7 @@
       </div>
       <!-- Nursery Section -->
       <div class="row mx-auto">
+        <!-- Nursery Text -->
         <div class="col-lg-4">
           <p>
             <strong>Nursery Available</strong>
@@ -570,6 +627,7 @@
             staffed nursery.
           </p>
         </div>
+        <!-- Nursery Image -->
         <div class="col-lg-3 align-self-center text-center">
           <p>
             <a href="/Publications/ExerciseYourFaith.pdf">
@@ -584,6 +642,7 @@
       </div>
       <!-- Exercise Your Faith Section -->
       <div class="row mx-auto">
+        <!-- Exercise Your Faith Text -->
         <div class="col-lg-4">
           <p>
             <strong>Exercise Your Faith</strong>
@@ -595,6 +654,7 @@
             exercises (no floor work), encouragement, and sharing health tips.
           </p>
         </div>
+        <!-- Exercise Your Faith Image -->
         <div class="col-lg-3 align-self-center text-center">
           <p>
             <a href="/Publications/ExerciseYourFaith.pdf">
@@ -609,6 +669,7 @@
       </div>
       <!-- Bread Ministry Section -->
       <div class="row mx-auto">
+        <!-- Bread Ministry Text -->
         <div class="col-lg-4">
           <p>
             <strong>Bread Ministry</strong>
@@ -623,6 +684,7 @@
             >
           </p>
         </div>
+        <!-- Bread Ministry Image -->
         <div class="col-lg-3 align-self-center text-center">
           <p>
             <a href="/MinistryBread.html">
@@ -637,6 +699,7 @@
       </div>
       <!-- AMA Section -->
       <div class="row mx-auto">
+        <!-- AMA Text -->
         <div class="col-lg-4">
           <p>
             <strong>Need Help?</strong>
@@ -648,6 +711,7 @@
             >
           </p>
         </div>
+        <!-- AMA Image -->
         <div class="col-lg-3 align-self-center text-center">
           <p>
             <a href="/Publications/Adel_Ministerial_Assn_Emergency_Fund.pdf">
@@ -676,6 +740,7 @@
   <!-- Footer Section -->
   <footer class="mb-sm-3 container mx-auto p-0">
     <div class="row mx-auto bg-dark shadow text-white rounded-sm-bottom">
+      <!-- UMC Logo -->
       <div
         class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center"
       >
@@ -683,6 +748,7 @@
           ><img height="60" width="60" src="./images/white+umc+logo.png"
         /></a>
       </div>
+      <!-- Copyright Info -->
       <div
         class="col-lg-8 col-md-10 col-sm-12 mt-2 align-self-center text-center text-md-start"
       >
@@ -691,9 +757,11 @@
           All rights reserved.
         </p>
       </div>
+      <!-- Social Media Text -->
       <div class="col-lg-2 mt-2 text-center align-self-center text-lg-end">
         <p>Stay Connected</p>
       </div>
+      <!-- Social Media Image -->
       <div
         class="col-lg-1 mt-2 ps-lg-0 mb-3 text-center text-lg-start align-self-center"
       >
