Added Bible Giving Comments

--- a/3rdGradeBibleClass.html
+++ b/3rdGradeBibleClass.html
@@ -33,7 +33,6 @@
     <script src="navbar.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/autoComplete.min.js"></script>
-    <!-- End Scripts -->
 
     <!-- Linking required CSS files -->
     <link
@@ -223,37 +222,53 @@
     </div>
     <!-- Main content section -->
     <div class="px-3 mx-auto container bg pb-5">
+      <!-- Header -->
       <div class="row pt-5 mx-auto text-center">
-        <h1>Bible Giving</h1>
+        <div class="col"><h1>Bible Giving</h1></div>
       </div>
-      <div class="row pt-3 mx-auto"><hr /></div>
+      <!-- Divider -->
       <div class="row pt-3 mx-auto">
-        <p>
-          Each fall, our church celebrates the giving of Bibles in our worship
-          by giving a Bible story book to our kindergarteners, an
-          age-appropriate Bible to our third graders, and (during confirmation
-          years) a study Bible to our confirmands.
-        </p>
+        <div class="col">
+          <hr />
+        </div>
       </div>
+      <!-- Paragraph 1 -->
+      <div class="row pt-3 mx-auto">
+        <div class="col">
+          <p>
+            Each fall, our church celebrates the giving of Bibles in our worship
+            by giving a Bible story book to our kindergarteners, an
+            age-appropriate Bible to our third graders, and (during confirmation
+            years) a study Bible to our confirmands.
+          </p>
+        </div>
+      </div>
+      <!-- Paragraph 2 -->
       <div class="row mx-auto">
-        <p>
-          By the third grade, students are developing the reading skills to
-          benefit from having a Bible of their very own. By providing age
-          appropriate Bibles, we are trying to encourage more interest and
-          understanding of the spiritual presence of the Living Word that can be
-          found there. During J.A.M. (Jesus and Me) and the lessons sent home,
-          church families can develop reading time together from the timeless
-          stories and life lessons to be found here.
-        </p>
+        <div class="col">
+          <p>
+            By the third grade, students are developing the reading skills to
+            benefit from having a Bible of their very own. By providing age
+            appropriate Bibles, we are trying to encourage more interest and
+            understanding of the spiritual presence of the Living Word that can
+            be found there. During J.A.M. (Jesus and Me) and the lessons sent
+            home, church families can develop reading time together from the
+            timeless stories and life lessons to be found here.
+          </p>
+        </div>
       </div>
+      <!-- Paragraph 3 -->
       <div class="row mx-auto">
-        <p>
-          Your support and partnering with the Holy in forming your child's
-          growing faith can arise through simply reading these good books. The
-          giving of Bibles also provides an opportunity for the church to
-          witness our faith in the sharing of the Word of our God.
-        </p>
+        <div class="col">
+          <p>
+            Your support and partnering with the Holy in forming your child's
+            growing faith can arise through simply reading these good books. The
+            giving of Bibles also provides an opportunity for the church to
+            witness our faith in the sharing of the Word of our God.
+          </p>
+        </div>
       </div>
+      <!-- Image -->
       <div class="row mx-auto text-center pt-3">
         <div class="col">
           <img
